# audio-transformer-asr

./: .env.example  .gitignore  README.md  pyproject.toml  temp.py
app/: __init__.py  jobs.py  main.py  transcription.py
app/static/: app.js  styles.css
app/templates/: index.html  job.html  layout.html
app/templates/partials/: job_list.html  job_panel.html  upload_form.html
