[project]
name = "audio2text"
version = "0.1.0"
description = "Local audio transcription workspace for long business conversations."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.0",
    "jinja2>=3.1.4",
    "pyannote.audio>=4.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
audio2text = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
